
      - Canon inkjet printers:

	Canon PIXMA MP360
	Canon PIXMA MP370
	Canon PIXMA MP390
	Canon PIXMA MP510
	Canon PIXMA MP970

      - Epson inkjet printers:

	EPSON Artisan 50
	EPSON EP-302
	EPSON EP-702A
	EPSON Stylus Photo P50
	EPSON Stylus Pro 3800 (EXPERIMENTAL)
	EPSON Stylus Pro 3880 (EXPERIMENTAL)
	EPSON Stylus Pro 4800
	EPSON Stylus Pro 4880
	EPSON Stylus Pro 11800
	EPSON Stylus T59
	EPSON Stylus T60
	EPSON Stylus TX659

	NOTE: The support for the Epson Stylus Pro 3800 and 3880 is
	experimental and WILL CHANGE SUBSTANTIALLY in future releases.
	It should not be considered suitable for production use at
	this time.

      - PCL laser printers:

	Brother HL-2030
	Brother HL-2035
	Canon LBP-3360
	Kyocera CS-1815
	Kyocera FS-1018MFP
	Kyocera FS-1020D
	Kyocera FS-1030D
	Kyocera FS-1118MFP
	Kyocera FS-1714M
	Kyocera FS-1920
	Kyocera FS-2000D
	Kyocera FS-3718M
	Kyocera FS-3820N
	Kyocera FS-3830N
	Kyocera FS-3900DN
	Kyocera FS-4000DN
	Kyocera FS-6020
	Kyocera FS-6026
	Kyocera FS-6300
	Kyocera FS-6750
	Kyocera FS-6900
	Kyocera FS-6950DN
	Kyocera FS-7028M
	Kyocera FS-9130DN
	Kyocera FS-920
	Kyocera FS-9530DN
	Kyocera KM-1510
	Kyocera KM-1815
	Kyocera KM-1820
	Kyocera KM-3050
	Kyocera KM-4050
	Kyocera KM-4230/5230
	Kyocera KM-5050
	Kyocera KM-6030
	Kyocera KM-8030
	Oki B4350
	Tektronix Phaser 750DP
	Tektronix Phaser 750DX
	Tektronix Phaser 750N
	Tektronix Phaser 750P
	Xerox Phaser 2135
	Xerox Phaser 4400B
	Xerox Phaser 4400DT
	Xerox Phaser 4400DX
	Xerox Phaser 4400N
	Xerox Phaser 4500B
	Xerox Phaser 4500DT
	Xerox Phaser 4500DX
	Xerox Phaser 4500N
	Xerox Phaser 4510B
	Xerox Phaser 4510DT
	Xerox Phaser 4510DX
	Xerox Phaser 4510N
	Xerox Phaser 5500B
	Xerox Phaser 5500DN
	Xerox Phaser 5500DT
	Xerox Phaser 5500DX
	Xerox Phaser 5500N
	Xerox Phaser 6130N
	Xerox Phaser 6180DN
	Xerox Phaser 6180MFP-D
	Xerox Phaser 6200B
	Xerox Phaser 6200DP
	Xerox Phaser 6200DX
	Xerox Phaser 6200N
	Xerox Phaser 6250B
	Xerox Phaser 6250DP
	Xerox Phaser 6250DT
	Xerox Phaser 6250DX