@@ -423,6 +423,9 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 	EPSON Stylus Pro 4800
 	EPSON Stylus Pro 4880
 	EPSON Stylus Pro 11800
+	EPSON Stylus T13
+	EPSON Stylus T22
+	EPSON Stylus T22E
 	EPSON Stylus T59
 	EPSON Stylus T60
 	EPSON Stylus TX659
